--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"gsap": "^3.11.5",
 		"lil-gui": "^0.18.1",
 		"stats.js": "^0.17.0",
-		"three": "^0.151.3"
+		"three": "^0.151.3",
+		"tippy.js": "^6.3.7"
 	}
 }
